--- a/Bleater/Base.lproj/Main.storyboard
+++ b/Bleater/Base.lproj/Main.storyboard
@@ -21,13 +21,43 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="530"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="vay-TD-0ee" customClass="ZABleatCell">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="zeroBleatsCell" id="Si2-sd-bmL">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Si2-sd-bmL" id="Goa-eQ-OJa">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Bleats Exist" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W6e-um-cn0">
+                                                    <rect key="frame" x="51" y="8" width="498" height="27"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="W6e-um-cn0" firstAttribute="bottom" secondItem="Goa-eQ-OJa" secondAttribute="bottomMargin" id="DbY-Qs-q2t"/>
+                                                <constraint firstItem="W6e-um-cn0" firstAttribute="leading" secondItem="Goa-eQ-OJa" secondAttribute="leadingMargin" constant="43" id="NWC-Vr-p03"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="W6e-um-cn0" secondAttribute="trailing" constant="43" id="lta-23-17B"/>
+                                                <constraint firstItem="W6e-um-cn0" firstAttribute="top" secondItem="Goa-eQ-OJa" secondAttribute="topMargin" id="qGc-KP-n47"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="bleatCell" id="vay-TD-0ee" customClass="ZABleatCell">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vay-TD-0ee" id="StV-Nm-euD">
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gma-pp-exq">
+                                                    <rect key="frame" x="8" y="13" width="584" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="bleatTextLabel" destination="gma-pp-exq" id="21Q-AF-h5d"/>
                                             <segue destination="ZVF-EK-Tz7" kind="show" id="73S-ua-mv0"/>
                                         </connections>
                                     </tableViewCell>
@@ -45,6 +75,10 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="writeBleatButtonPressed:" destination="T9v-yV-IIW" eventType="touchUpInside" id="RTK-6M-dJG"/>
+                                    <segue destination="U8T-Na-SIL" kind="presentation" id="2aB-7d-3R3"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -58,10 +92,62 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="YuG-HK-mkV"/>
+                    <connections>
+                        <outlet property="feedTable" destination="aof-d9-jOj" id="ucp-kS-54u"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iWv-t6-hWk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="532" y="294"/>
+            <point key="canvasLocation" x="532" y="285"/>
+        </scene>
+        <!--Compose BleatVC-->
+        <scene sceneID="YGJ-zg-BQT">
+            <objects>
+                <viewController id="U8T-Na-SIL" customClass="ZAComposeBleatVC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="RC4-8y-mmw"/>
+                        <viewControllerLayoutGuide type="bottom" id="1uj-M3-wPe"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="mzz-h5-q6J">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="S5p-5v-KFx">
+                                <rect key="frame" x="107" y="108" width="386" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="4fZ-ST-epK"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Compose Bleat" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dax-gV-hr8">
+                                <rect key="frame" x="232" y="28" width="137" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="137" id="TnP-5a-NDw"/>
+                                    <constraint firstAttribute="height" constant="21" id="nRB-5Q-Puv"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="dax-gV-hr8" firstAttribute="top" secondItem="RC4-8y-mmw" secondAttribute="bottom" constant="8" id="GqU-wG-YRX"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="S5p-5v-KFx" secondAttribute="trailing" constant="91" id="Hk0-eZ-wnf"/>
+                            <constraint firstAttribute="centerX" secondItem="dax-gV-hr8" secondAttribute="centerX" id="P6c-6O-Lpu"/>
+                            <constraint firstItem="S5p-5v-KFx" firstAttribute="top" secondItem="dax-gV-hr8" secondAttribute="bottom" constant="59" id="f0f-ym-uDe"/>
+                            <constraint firstItem="S5p-5v-KFx" firstAttribute="leading" secondItem="mzz-h5-q6J" secondAttribute="leadingMargin" constant="91" id="lzD-t7-hPL"/>
+                            <constraint firstAttribute="centerX" secondItem="S5p-5v-KFx" secondAttribute="centerX" id="wIJ-hH-vrf"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="composeBleatField" destination="S5p-5v-KFx" id="045-ur-oBE"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lr3-JK-Qaa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="532" y="1034"/>
         </scene>
         <!--Bleat DetailVC-->
         <scene sceneID="HBV-61-bZQ">
@@ -74,12 +160,29 @@
                     <view key="view" contentMode="scaleToFill" id="vZN-Qy-Yxl">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bleat Text" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="yB3-Vl-xKX">
+                                <rect key="frame" x="135" y="143" width="330" height="330"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="yB3-Vl-xKX" firstAttribute="top" secondItem="xAx-eg-j6t" secondAttribute="bottom" constant="79" id="4UJ-Jd-Gd4"/>
+                            <constraint firstItem="gca-Li-CPy" firstAttribute="top" secondItem="yB3-Vl-xKX" secondAttribute="bottom" constant="127" id="Mqv-6H-Ei3"/>
+                            <constraint firstItem="yB3-Vl-xKX" firstAttribute="leading" secondItem="vZN-Qy-Yxl" secondAttribute="leadingMargin" constant="119" id="bL4-um-qMQ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="yB3-Vl-xKX" secondAttribute="trailing" constant="119" id="lyh-l7-VZJ"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="bleatContentLabel" destination="yB3-Vl-xKX" id="ZPo-uq-9N5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UaI-qM-gfx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1288" y="294"/>
+            <point key="canvasLocation" x="1288" y="285"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="AiI-zJ-T6I">
